# actix_postgres_api_model

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
entity/: Cargo.toml
entity/src/entities/: mod.rs
entity/src/entities/two_fa_entity/: mod.rs  two_fa_model.rs
entity/src/entities/user_entity/: user_model.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240121_140152_users_table.rs  m20240121_140719_two_fa_table.rs
service/: Cargo.toml
service/src/mutation/: mod.rs  two_fa_mutations.rs  user_mutations.rs
service/src/query/: mod.rs  two_fa_queries.rs  user_queries.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
src/api/: mod.rs  routes.rs
src/api/account/: mod.rs
src/api/account/auth/: check_code_api.rs  check_email_api.rs  mod.rs  redirect_to_auth.rs  send_code_api.rs
src/api/account/delete/: delete_user.rs  mod.rs
src/api/account/register/: connection_test_pro_api.rs  mod.rs  signin_api.rs  signup_api.rs
src/emails/: mod.rs  two_factor_auth_email.rs  types_emails.rs
src/error/: custom_error.rs  messages.rs  mod.rs  resp_errors.rs
src/error/errors/: mod.rs
src/error/errors/signin_data/: mod.rs  signin_data_check.rs  signin_data_errors.rs
src/error/errors/signup_data/: mod.rs  signup_data_check.rs  signup_data_errors.rs
src/middlewares/: app_state.rs  check_auth_middleware.rs  mod.rs  rate_limit_middleware.rs
src/repository/: postgres_repo.rs
src/sms/: mod.rs  send_auth_code_sms.rs  send_rdv_reminder_sms.rs
src/types/: mod.rs
src/types/auth/: check_code.rs  check_email.rs  mod.rs
src/types/common/: crud_status.rs  mod.rs  user_category.rs
src/types/register/: mod.rs  signin_data_result.rs  signup_data_result.rs
src/utils/: cookie_utils.rs  crypto_utils.rs  jwt_utils.rs  mod.rs  task_manager_utils.rs  time_utils.rs  two_factors_auth_utils.rs  validate_utils.rs
src/utils/number/: mod.rs  sleep_until.rs  timestamp_to_week_id.rs
src/utils/string/: format_into_string_utils.rs  mod.rs
