[package]
name = "actix_postgres_api_model"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "service", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
actix-cors = "0.6.4"
actix-web = "4.3.1"
tokio = "1.34.0"
futures-util = "0.3.30"
uuid = { version = "1.4.1", features = ["v4"] }
aes-gcm = "0.10.2"
async-trait = "0.1.73"
dotenv = "0.15.0"
generic-array = "0.14.7"
nanoid = "0.4.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
validator = { version = "0.16.1", features = ["derive", "phone"] }
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["json"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "mock",
] }
serde = "1.0.185"
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
log = "0.4.20"
