[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.26" , features = ["serde"] }
tracing = "0.1.37"
futures = "0.3"
serde_json = "1.0.105"

[dependencies.sea-orm]
version = "0.12.0"
features = ["runtime-tokio-rustls", "sqlx-postgres", "debug-print"]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]